--- a/main/gnutls/APKBUILD
+++ b/main/gnutls/APKBUILD
@@ -2,12 +2,13 @@
 # Contributor: Michael Mason <ms13sp@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gnutls
-pkgver=3.6.1
+pkgver=3.6.7
 pkgrel=0
 pkgdesc="A TLS protocol implementation"
-url="http://www.gnutls.org/"
+url="https://www.gnutls.org/"
 arch="all"
 license="GPL"
+options="!check" # depends on datefudge
 checkdepends="diffutils"
 makedepends="nettle-dev zlib-dev libtasn1-dev p11-kit-dev libunistring-dev texinfo"
 subpackages="$pkgname-dbg $pkgname-doc $pkgname-dev $pkgname-utils $pkgname-c++:xx"
@@ -15,11 +16,14 @@ _v=${pkgver%.*}
 case $pkgver in
 *.*.*.*) _v=${_v%.*};;
 esac
-source="ftp://ftp.gnutls.org/gcrypt/gnutls/v${_v}/$pkgname-$pkgver.tar.xz
+source="https://www.gnupg.org/ftp/gcrypt/gnutls/v${_v}/gnutls-$pkgver.tar.xz
 	tests-date-compat.patch"
 builddir="$srcdir/$pkgname-$pkgver"
 
 # secfixes:
+#   3.6.7-r0:
+#     - CVE-2019-3836
+#     - CVE-2019-3829
 #   3.5.13-r0:
 #     - CVE-2017-7507
 
@@ -43,9 +47,7 @@ build() {
 check() {
 	cd "$builddir"
 
-	# XXX: Some tests fail on x86 and x86_64, most likely due to some problem
-	# on the builders (cannot reproduce it locally and it passes on others).
-	make check || true
+	make check
 }
 
 package() {
@@ -65,5 +67,5 @@ xx() {
 	mv "$pkgdir"/usr/lib/lib*xx.so.* "$subpkgdir"/usr/lib/
 }
 
-sha512sums="1f2bd3203ea96844c531be700b44623b79f46743143edf97011aab07895ca18d62f1659c7fafc5e1c4b0686fde490836f00358bdd60d6ac0b842526db002da23  gnutls-3.6.1.tar.xz
-14b1be86a0180c914aaaada261ccf01914d48df9510b57572e4f32683d1dd984a907ecf2c848cc4773b1c139059de26383a2c617f509f8c75b985668a23fd28d  tests-date-compat.patch"
+sha512sums="ae9b8996eb9b7269d28213f0aca3a4a17890ba8d47e3dc3b8e754ab8e2b4251e9412aaaa161a8bf56167f04cc169b4cada46f55a7bde92b955eb36cd717a99f3  gnutls-3.6.7.tar.xz
+b9aefaca8a894b223b8bcc738524602e36edf6a49f458606235598470033c81b02e876bec18a41ac57760cb9644d44b4c35969be74d4a8120245fff716429531  tests-date-compat.patch"
