main/gnutls: Enable tests again

--- a/main/gnutls/APKBUILD
+++ b/main/gnutls/APKBUILD
@@ -3,20 +3,21 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gnutls
 pkgver=3.6.11.1
-pkgrel=0
+pkgrel=1
 pkgdesc="A TLS protocol implementation"
 url="https://www.gnutls.org/"
 arch="all"
 license="GPL-3.0-or-later"
-options="!check" # depends on datefudge
-checkdepends="diffutils"
+checkdepends="diffutils datefudge"
 makedepends="nettle-dev zlib-dev libtasn1-dev p11-kit-dev libunistring-dev texinfo"
 subpackages="$pkgname-dbg $pkgname-doc $pkgname-dev $pkgname-utils $pkgname-c++:xx"
 _v=${pkgver%.*}
 case $pkgver in
 *.*.*.*) _v=${_v%.*};;
 esac
-source="https://www.gnupg.org/ftp/gcrypt/gnutls/v$_v/gnutls-$pkgver.tar.xz"
+source="https://www.gnupg.org/ftp/gcrypt/gnutls/v$_v/gnutls-$pkgver.tar.xz
+	tests-crq.patch
+	tests-certtool.patch"
 
 # secfixes:
 #   3.6.7-r0:
@@ -62,4 +63,6 @@ xx() {
 	mv "$pkgdir"/usr/lib/lib*xx.so.* "$subpkgdir"/usr/lib/
 }
 
-sha512sums="55fbbf0ebc824fbc91ccd08d1708452c5b1c12af75e332f29414540eb2f81337fa605a693ce9f34319a927e9d71177e6e7ffea5c6747792d341fb740f68c9489  gnutls-3.6.11.1.tar.xz"
+sha512sums="55fbbf0ebc824fbc91ccd08d1708452c5b1c12af75e332f29414540eb2f81337fa605a693ce9f34319a927e9d71177e6e7ffea5c6747792d341fb740f68c9489  gnutls-3.6.11.1.tar.xz
+3e7d872963cc25e49f1ecf98de7d6f3b6b22d2c1c9e982bc4b22ce658c11d8567903728e5aa33ce7b6d3e25fe0b7a75b8aca3e8f53838155af5abe23887d33fa  tests-crq.patch
+30739b5ca06bb72e93d021065fbc90a1808c5fc139ff917308738456ae8601f5c372d223d77e51cdd34a6aa4d28dcb8140101c3f753ede1e39ee12e229c24cbe  tests-certtool.patch"
