community/openjdk[9,10,11]: Enhance and unify APKBUILDs

--- a/community/openjdk10/APKBUILD
+++ b/community/openjdk10/APKBUILD
@@ -3,58 +3,56 @@
 pkgname=openjdk10
 pkgver=10.0.2_p13
 _pkgver=${pkgver/_p/+}
-pkgrel=0
+pkgrel=1
 pkgdesc="Oracle OpenJDK 10"
 url="https://hg.openjdk.java.net/jdk-updates/jdk10u"
-arch="all !x86 !armhf !armv7" # openjdk9 is not yet available on 32 bit arches
-license="GPL-2.0 with Classpath"
+arch="all !x86 !armhf !armv7" # oracle dopped support for 32 bit arches, so disable for now
+license="GPL-2.0-with-classpath-exception"
 makedepends="autoconf
-bash
-gawk
-grep
-make
-openjdk9-jdk
-zip
-alsa-lib-dev
-cups-dev
-elfutils-dev
-fontconfig-dev
-freetype-dev
-giflib-dev
-lcms2-dev
-libexecinfo-dev
-libffi-dev
-libjpeg-turbo-dev
-libx11-dev
-libxext-dev
-libxrender-dev
-libxt-dev
-libxtst-dev
-linux-headers
-zlib-dev"
+	bash
+	gawk
+	grep
+	make
+	openjdk9-jdk
+	zip
+	alsa-lib-dev
+	cups-dev
+	elfutils-dev
+	fontconfig-dev
+	freetype-dev
+	giflib-dev
+	lcms2-dev
+	libexecinfo-dev
+	libffi-dev
+	libjpeg-turbo-dev
+	libx11-dev
+	libxext-dev
+	libxrender-dev
+	libxt-dev
+	libxtst-dev
+	linux-headers
+	zlib-dev"
 depends="$pkgname-jmods $pkgname-demos $pkgname-doc $pkgname-jdk" # for the virtual openjdk10 package
 subpackages="$pkgname-jmods:_jmods:noarch
-$pkgname-demos:_demos:noarch
-$pkgname-doc:_doc:noarch
-$pkgname-dbg:_dbg
-$pkgname-jre:_jre
-$pkgname-src:_src:noarch
-$pkgname-jre-headless:_jre_headless
-$pkgname-jdk:_jdk"
+	$pkgname-demos:_demos:noarch
+	$pkgname-doc:_doc:noarch
+	$pkgname-dbg:_dbg
+	$pkgname-jre:_jre
+	$pkgname-src:_src:noarch
+	$pkgname-jre-headless:_jre_headless
+	$pkgname-jdk:_jdk"
 source="jdk-$_pkgver.tar.bz2::http://hg.openjdk.java.net/jdk-updates/jdk10u/archive/jdk-$_pkgver.tar.bz2
 
-2019-01-05_config.sub::https://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.sub;h=3b4c7624b68d2d7f84618e1b5fa2badd43a48325;hb=286a38db91ea2dce1749ab7d1d9ea5ae344a16c1
-build.patch
-aarch64.patch
-arm.patch
-ppc64le.patch
-x86.patch
+	build.patch
+	aarch64.patch
+	arm.patch
+	ppc64le.patch
+	x86.patch
 
-HelloWorld.java
-TestECDSA.java
-TestCryptoLevel.java
-Alpine_Bug_10126.java
-"
+	HelloWorld.java
+	TestECDSA.java
+	TestCryptoLevel.java
+	Alpine_Bug_10126.java"
 builddir="$srcdir/jdk10u-jdk-$_pkgver"
 
 _java_home="/usr/lib/jvm/java-10-openjdk"
@@ -64,18 +62,19 @@ sonameprefix="$pkgname:"
 
 # enable running the JTReg tests in check?
 # see comment in that function for explanation
-_run_jtreg=0
+_run_jtreg=${_run_jtreg:-0}
 if [ $_run_jtreg -ne 0 ]; then
 	makedepends="$makedepends java-jtreg"
-	checkdepends="$checkdepends ttf-freefont xvfb"
+	checkdepends="$checkdepends ttf-freefont xvfb-run"
 fi
 
 
 prepare() {
 	default_prepare
 
-	# update the config.sub file to detect alpine
-	cp $srcdir/2019-01-05_config.sub make/autoconf/build-aux/autoconf-config.sub
+	# update autoconf files to detect alpine
+	update_config_sub
+	update_config_guess
 
 	# remove not compilable module (hotspot jdk.hotspot.agent)
 	# this needs libthread_db which is only provided by glibc
@@ -100,7 +99,9 @@ build() {
 	# shellcheck disable=2097 disable=2098
 	CFLAGS='' CXXFLAGS='' LDFLAGS='' \
 		bash ./configure \
-		--openjdk-target=$CHOST \
+		--build=$CBUILD \
+		--host=$CHOST \
+		--target=$CTARGET \
 		--prefix="$_java_home" \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
@@ -134,8 +135,6 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-
 	local _java_bin="./build/*-normal-server-release/images/jdk/bin"
 
 	# 1) compile and run a simple hello world
@@ -155,6 +154,7 @@ check() {
 	$_java_bin/java Alpine_Bug_10126
 
 	# run the gtest unittest suites
+	# they don't take long, DO NOT DISABLE THEM!
 	MAKEFLAGS='' make test-hotspot-gtest
 
 	# The jtreg tests take very, very long to finish and show some failures (9 - 12 on my machine, varying between runs)
@@ -163,29 +163,19 @@ check() {
 	# When updating this aport please let them run at least once on your machine to see if the failure count changes.
 	if [ $_run_jtreg -ne 0 ]; then
 		_logfile=$( mktemp -p "$builddir" )
-		if [ -z "$DISPLAY" ]; then
-			Xvfb :99 &
-			_xvfb_pid=$!
-			DISPLAY=:99
-		fi
-		MAKEFLAGS='' DISPLAY=$DISPLAY make \
+		MAKEFLAGS='' xvfb-run make \
 			run-test-tier1 \
 			run-test-tier2 \
 			run-test-tier3 \
 			| tee "$_logfile"
 		msg "---------------------------------------"
 		msg "The build log can be found at $_logfile"
-		if [ -n "$_xvfb_pid" ]; then
-			kill $_xvfb_pid
-		fi
 		# abort the build so you may take a look at the logfile
 		false
 	fi
 }
 
 package() {
-	cd "$builddir"
-
 	mkdir -p "$pkgdir/$_java_home"
 	cp -r build/*-normal-server-release/images/jdk/* "$pkgdir/$_java_home"
 }
@@ -315,12 +305,11 @@ _jdk() {
 }
 
 sha512sums="7491da11d5e0013db75d33e09be7a91ac0dbcde6282541a39fe471fd5368d49b15403bc7508b330ca60210b3ca02730743ba280657283a231853f6882a3ca74d  jdk-10.0.2+13.tar.bz2
-74e3d868d766e605921542969dd2f646a8adec1b82181aaeb02b623a524cb9011e44c261d4e13ab24268c79c6bc1d260e62d41a928b1b402b186dc5676272e36  2019-01-05_config.sub
-e0e7957ca035346071e04aa1b09226189c69878461c0c94c8057983f9ceab493bd192799ac33be0155831a75fac8a61f40aafea1ad4bacfdb50dfe310406c777  build.patch
+5af890bee5db3641ba94d15f6ca9ffe16ca3290e9ef08829131544338b78d51bf37cfb3ceabcb445f06fe5a6a1f24b33446074d68a5aab498dec2d7821de8511  build.patch
 479d0183aece1ca3f41d4eb9e9bf69d3d0fc2668e32d8b826ae3bd117da5d83241868e8b0cab6773cb87bd7403f17d519cc190c530a783b51f28a6aee0272bea  aarch64.patch
 776edc09c2860820e7f8500153b9b64e03e93df8c060cb02546da72102f8574d31b1c8354d02b2714b3aa480d4ec6f487942dd09bec2a921d4e18a39539a4d95  arm.patch
 06f134112d8f6c3909f332713e8fef755e65815697f08ef8ea35f89ad658c76d9063d39754eec50de93ef709a4d37dcb0815d7a74663d8668af0e23793972395  ppc64le.patch
-d882d3be6d19a23b495f0f4211b7d01bcf900afadcd1c783b0943db32c41935f336615ea4c68fe7c597ec19b793c05c9674f630c0c9580e9241d11f4a86d3781  x86.patch
+e14b0b99cb7527dee0e5e77dc912df7b8c7ad7c9211fca433173311cf863bd213b96299c6966cdc6b6ce4defcc184eb5e86424e8281c86b38fcb6b2564306e9f  x86.patch
 d1767dddd8e0956e25c0f77ed45c6fc86a1191bae1704a6dc33be490fd20eaa50461fe5c2a3349512059d555651e2eb41437dd3c1096c351e8ee68b4534a2579  HelloWorld.java
 27e91edef89d26c0c5b9a813e2045f8d2b348745a506ae37b34b660fa7093da9a4e0e676ea41dc4a5c901bce02e5304d95e90f68d6c99cbf461b2da40a7a9853  TestECDSA.java
 b02dff8d549f88317bb4c741a9e269e8d59eef990197d085388fc49c7423a4eb9367dbe1e02bffb10e7862f5980301eb58d4494e177d0e8f60af6b05c7fbbe60  TestCryptoLevel.java
