--- a/community/openjdk11/APKBUILD
+++ b/community/openjdk11/APKBUILD
@@ -3,57 +3,57 @@
 pkgname=openjdk11
 pkgver=11.0.5_p10
 _pkgver=${pkgver/_p/+}
-pkgrel=0
+pkgrel=1
 pkgdesc="Oracle OpenJDK 11"
 url="https://hg.openjdk.java.net/jdk-updates/jdk11u"
-arch="all !x86 !armhf !armv7" # openjdk10 is not yet available on 32 bit arches
-license="GPL-2.0 with Classpath"
+arch="all !x86 !armhf !armv7" # oracle dopped support for 32 bit arches, so disable for now
+license="GPL-2.0-with-classpath-exception"
 makedepends="autoconf
-bash
-gawk
-grep
-make
-openjdk10-jdk
-zip
-alsa-lib-dev
-cups-dev
-elfutils-dev
-fontconfig-dev
-freetype-dev
-giflib-dev
-lcms2-dev
-libexecinfo-dev
-libffi-dev
-libjpeg-turbo-dev
-libx11-dev
-libxext-dev
-libxrandr-dev
-libxrender-dev
-libxt-dev
-libxtst-dev
-linux-headers
-zlib-dev"
+	bash
+	gawk
+	grep
+	make
+	openjdk10-jdk
+	zip
+	alsa-lib-dev
+	cups-dev
+	elfutils-dev
+	fontconfig-dev
+	freetype-dev
+	giflib-dev
+	lcms2-dev
+	libexecinfo-dev
+	libffi-dev
+	libjpeg-turbo-dev
+	libx11-dev
+	libxext-dev
+	libxrandr-dev
+	libxrender-dev
+	libxt-dev
+	libxtst-dev
+	linux-headers
+	zlib-dev"
 depends="$pkgname-jmods $pkgname-demos $pkgname-doc $pkgname-jdk" # for the virtual openjdk11 package
 subpackages="$pkgname-jmods:_jmods:noarch
-$pkgname-demos:_demos:noarch
-$pkgname-doc:_doc:noarch
-$pkgname-dbg:_dbg
-$pkgname-jre:_jre
-$pkgname-src:_src:noarch
-$pkgname-jre-headless:_jre_headless
-$pkgname-jdk:_jdk"
+	$pkgname-demos:_demos:noarch
+	$pkgname-doc:_doc:noarch
+	$pkgname-dbg:_dbg
+	$pkgname-jre:_jre
+	$pkgname-src:_src:noarch
+	$pkgname-jre-headless:_jre_headless
+	$pkgname-jdk:_jdk"
 source="jdk-$_pkgver.tar.bz2::http://hg.openjdk.java.net/jdk-updates/jdk11u/archive/jdk-$_pkgver.tar.bz2
 
-build.patch
-aarch64.patch
-arm.patch
-ppc64le.patch
-x86.patch
+	build.patch
+	aarch64.patch
+	arm.patch
+	ppc64le.patch
+	x86.patch
 
-HelloWorld.java
-TestECDSA.java
-TestCryptoLevel.java
-Alpine_Bug_10126.java
+	HelloWorld.java
+	TestECDSA.java
+	TestCryptoLevel.java
+	Alpine_Bug_10126.java
 "
 builddir="$srcdir/jdk11u-jdk-$_pkgver"
 
@@ -64,10 +64,10 @@ sonameprefix="$pkgname:"
 
 # enable running the JTReg tests in check?
 # see comment in that function for explanation
-_run_jtreg=0
+_run_jtreg=${_run_jtreg:-0}
 if [ $_run_jtreg -ne 0 ]; then
 	makedepends="$makedepends java-jtreg"
-	checkdepends="$checkdepends ttf-freefont xvfb"
+	checkdepends="$checkdepends ttf-freefont xvfb-run"
 fi
 
 
@@ -86,8 +86,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
-
 	if [ $_run_jtreg -ne 0 ]; then
 		_with_jtreg="--with-jtreg=/usr/share/java/jtreg"
 	else
@@ -100,9 +98,12 @@ build() {
 	#  --with-extra-cxxflags="${CXXFLAGS}"
 	#  --with-extra-ldflags="${LDFLAGS}"
 	# See also paragraph "Configure Control Variables" from "common/doc/building.md"
-	CFLAGS= CXXFLAGS= LDFLAGS= \
+	# shellcheck disable=2097 disable=2098
+	CFLAGS='' CXXFLAGS='' LDFLAGS='' \
 		bash ./configure \
-		--openjdk-target=$CHOST \
+		--build=$CBUILD \
+		--host=$CHOST \
+		--target=$CTARGET \
 		--prefix="$_java_home" \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
@@ -132,12 +133,10 @@ build() {
 		--with-vendor-url="https://alpinelinux.org/" \
 		--with-vendor-bug-url="https://bugs.alpinelinux.org/projects/alpine/issues" \
 		--with-vendor-vm-bug-url="https://bugs.alpinelinux.org/projects/alpine/issues"
-	MAKEFLAGS= make images
+	MAKEFLAGS='' make jdk-image
 }
 
 check() {
-	cd "$builddir"
-
 	local _java_bin="./build/*-normal-server-release/images/jdk/bin"
 
 	# 1) compile and run a simple hello world
@@ -157,7 +156,8 @@ check() {
 	$_java_bin/java Alpine_Bug_10126
 
 	# run the gtest unittest suites
-	MAKEFLAGS= make test-hotspot-gtest
+	# they don't take long, DO NOT DISABLE THEM!
+	MAKEFLAGS='' make test-hotspot-gtest
 
 	# The jtreg tests take very, very long to finish and show some failures (9 - 12 on my machine, varying between runs)
 	# I think these are not critical and can be safely ignored.
@@ -165,29 +165,19 @@ check() {
 	# When updating this aport please let them run at least once on your machine to see if the failure count changes.
 	if [ $_run_jtreg -ne 0 ]; then
 		_logfile=$( mktemp -p "$builddir" )
-		if [ -z "$DISPLAY" ]; then
-			Xvfb :99 &
-			_xvfb_pid=$!
-			DISPLAY=:99
-		fi
-		MAKEFLAGS= DISPLAY=$DISPLAY make \
+		MAKEFLAGS='' xvfb-run make \
 			run-test-tier1 \
 			run-test-tier2 \
 			run-test-tier3 \
 			| tee "$_logfile"
 		msg "---------------------------------------"
 		msg "The build log can be found at $_logfile"
-		if [ -n "$_xvfb_pid" ]; then
-			kill $_xvfb_pid
-		fi
 		# abort the build so you may take a look at the logfile
 		false
 	fi
 }
 
 package() {
-	cd "$builddir"
-
 	mkdir -p "$pkgdir/$_java_home"
 	cp -r build/*-normal-server-release/images/jdk/* "$pkgdir/$_java_home"
 }
@@ -230,6 +220,7 @@ _dbg() {
 
 	mkdir -p "$_toroot/lib/server"
 	mkdir -p "$_toroot/lib/jli"
+
 	mv "$_fromroot"/lib/server/*.debuginfo "$_toroot"/lib/server
 	mv "$_fromroot"/lib/jli/*.debuginfo "$_toroot"/lib/jli
 	mv "$_fromroot"/lib/*.debuginfo "$_toroot"/lib
@@ -308,11 +299,11 @@ _jdk() {
 }
 
 sha512sums="0d52c78e217b79756be0fc6b3f9204bae254ec7b9ae10b6c3114463a9c028143807f4422711f0c02b81a034ae6e88fa2efc6bed85022720807344230a8aa12a6  jdk-11.0.5+10.tar.bz2
-66a9f2736da87de09d7bcc136771ab760bdba7847f3a23b2aa4efbc2e55ac8b49510c6d7afdf3f8d046c6e3fe9dca0d4cb0b5a38d7a3aebaf86fa0e3cc635eac  build.patch
+1460cbacb57427b23244fd85d47af9666760d9877f4c0424c92b9708343e147d0647477311d14abedb7de707cde85f21340686eeb07c2e02a23cc808d8b268e5  build.patch
 8c0f1f8d2a78ebb30a8460bc0ea9cd2349cea98819df1577bf7de19a1dd82d06a593f36b4e17c282ed53d23f00163e387e3dd1f3c9e5a092726e78c3aa710370  aarch64.patch
-d2903a5b3b9f82c4888416580f0b93888bf21ae0dac0ce6e926607a82a9e53b7e10e13f07a984f65dc116e81f58cd3844d6156088534c0059be8f6ee68e19a43  arm.patch
+36a87d59001e13351b5f3fd6f8a9351eb3ecfe2b16af3af22986847ff009b7ff8baec67b9b938fe650aaebd4751af4576a6d1133e5e5f8eef91616db5e5ece02  arm.patch
 4eb577645e7b6d4563290480e162702030033515ff4845edbd1dbf2604b6f1e7d2a3cdd85058d6b41938b54c097635125c4429b9df3fcda589b980aa1740fd2e  ppc64le.patch
-89e681da2de0bcb5131e2512d1280ce8da684ede5b38379c6325cd9f57e78a4bdde3abfa0a0a496889411dd57264312094973ce2da301293d0826114a3ef09d3  x86.patch
+4dbae3089f7a2d1d69174add13802d2ed0d1fea6649bff9384d92f2259e8bb6bf5f70b61ca21f2f67624b261995468ace562b19f1573dea07df9733edb8eddf8  x86.patch
 d1767dddd8e0956e25c0f77ed45c6fc86a1191bae1704a6dc33be490fd20eaa50461fe5c2a3349512059d555651e2eb41437dd3c1096c351e8ee68b4534a2579  HelloWorld.java
 27e91edef89d26c0c5b9a813e2045f8d2b348745a506ae37b34b660fa7093da9a4e0e676ea41dc4a5c901bce02e5304d95e90f68d6c99cbf461b2da40a7a9853  TestECDSA.java
 b02dff8d549f88317bb4c741a9e269e8d59eef990197d085388fc49c7423a4eb9367dbe1e02bffb10e7862f5980301eb58d4494e177d0e8f60af6b05c7fbbe60  TestCryptoLevel.java
