--- a/testing/opensm/APKBUILD
+++ b/testing/opensm/APKBUILD
@@ -1,21 +1,21 @@
 # Contributor: Jann - Ove Risvik <jann.ove@usaklig.com>
 # Maintainer:
 pkgname=opensm
-pkgver=3.3.20
-pkgrel=2
+pkgver=3.3.22
+pkgrel=0
 pkgdesc="OpenSM InfiniBand subnet manager"
 url="https://github.com/linux-rdma/opensm"
 arch="x86 x86_64 ppc64le"
 license="GPL-2.0-only OR BSD-2-Clause"
 depends_dev="libibumad-dev"
-makedepends="$depends_dev bison flex"
-subpackages="$pkgname-dev $pkgname-doc"
-source="https://www.openfabrics.org/downloads/management/$pkgname-$pkgver.tar.gz
-0001-musl-fixes.patch"
+makedepends="$depends_dev bison flex automake autoconf libtool linux-headers"
+subpackages="$pkgname-dev $pkgname-doc $pkgname-openrc"
+source="https://github.com/linux-rdma/opensm/releases/download/$pkgver/opensm-$pkgver.tar.gz
+	0001-musl-fixes.patch"
 
 prepare() {
-	update_config_sub
 	default_prepare
+	autoreconf -fi
 }
 
 build() {
@@ -25,7 +25,8 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
-		--localstatedir=/var
+		--localstatedir=/var \
+		--disable-static
 	make
 }
 
@@ -33,9 +34,5 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-md5sums="ed615b4681e94ef2e13a5de773ab89a3  opensm-3.3.20.tar.gz
-cbe036cdfddfd37f6381fe7269498d0e  0001-musl-fixes.patch"
-sha256sums="e17d7446abb99809b0975ea894a9f0ce56a65c5eac1185a857c8bf7978785a98  opensm-3.3.20.tar.gz
-a507a4cc20982e75e674da5ba43e5a56420153338f1ffd9a6f5328488acfe8b2  0001-musl-fixes.patch"
-sha512sums="ea76ae8088c949d6d0d7524920cb333d0981af34bdbe2fa2bde30f13b58dcaeb842989621990a09dfd02db56c180a70109a00e5a45aba800d593b7ee95e4b9b7  opensm-3.3.20.tar.gz
+sha512sums="4334a44dbf26e0bc9349cbf22044730d1fe584ad3fda0c6623145e4aab611823e161bba669e3979d75326d90ccf558d85634bfe7f4a1db14adb63f153b77cb2f  opensm-3.3.22.tar.gz
 c5f07423c9726bc4671327596d8585a669b25d75d9143db99e621ab6a08ed4aa0ee22e9725afe10bf4bf98ed503a06e9f52639f41a3cae61a34987b4ed643a32  0001-musl-fixes.patch"
