main/openjpeg: cleanup patches and update url
(cherry picked from commit 18df15dbb366dab8b2d3261d3758f99b8524906d)

--- a/main/openjpeg/APKBUILD
+++ b/main/openjpeg/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=openjpeg
 pkgver=2.3.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Open-source implementation of JPEG2000 image codec"
-url="http://www.openjpeg.org/"
+url="https://www.openjpeg.org/"
 arch="all"
 options="!check"  # No test suite.
 license="BSD-2-Clause-NetBSD"
