main/openssl: install man pages in different section
avoid clashing with shadow-doc by install openssl man pages in separate
section.

Patch from debian.

fixes #10724

(cherry picked from commit 1949cc60da358d2be8b885867d1bee418914692a)

--- a/main/openssl/APKBUILD
+++ b/main/openssl/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=openssl
 pkgver=1.1.1d
 _abiver=${pkgver%.*}
-pkgrel=0
+pkgrel=1
 pkgdesc="Toolkit for Transport Layer Security (TLS)"
 url="https://www.openssl.org"
 arch="all"
@@ -12,7 +12,9 @@ makedepends_build="perl"
 makedepends_host="linux-headers"
 makedepends="$makedepends_host $makedepends_build"
 subpackages="$pkgname-dbg $pkgname-dev $pkgname-doc libcrypto$_abiver:_libcrypto libssl$_abiver:_libssl"
-source="https://www.openssl.org/source/openssl-$pkgver.tar.gz"
+source="https://www.openssl.org/source/openssl-$pkgver.tar.gz
+	man-section.patch
+	"
 case "$CARCH" in
 s390x) options="$options !check";; # FIXME: test hangs
 esac
@@ -107,4 +109,5 @@ _libssl() {
 	done
 }
 
-sha512sums="2bc9f528c27fe644308eb7603c992bac8740e9f0c3601a130af30c9ffebbf7e0f5c28b76a00bbb478bad40fbe89b4223a58d604001e1713da71ff4b7fe6a08a7  openssl-1.1.1d.tar.gz"
+sha512sums="2bc9f528c27fe644308eb7603c992bac8740e9f0c3601a130af30c9ffebbf7e0f5c28b76a00bbb478bad40fbe89b4223a58d604001e1713da71ff4b7fe6a08a7  openssl-1.1.1d.tar.gz
+3e5c425d219768721d38bb33db7445eb3ea12d9447a16c5b23b9fddfcbd9d40b98b39506aeac9cbaced4be22ad5a6cb8e4d16fbe4850ac50a6b0c716592b2a2b  man-section.patch"
