main/clang: add clang-extra-tools subpkg

--- a/main/clang/APKBUILD
+++ b/main/clang/APKBUILD
@@ -4,7 +4,7 @@
 pkgname=clang
 # Note: Update together with llvm.
 pkgver=9.0.1
-pkgrel=0
+pkgrel=1
 _llvmver=${pkgver%%.*}
 pkgdesc="A C language family front-end for LLVM"
 arch="all"
@@ -27,14 +27,21 @@ makedepends="
 checkdepends="diffutils bash"
 depends_dev="$pkgname=$pkgver-r$pkgrel"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-libs
-	$pkgname-analyzer::noarch"
+	$pkgname-analyzer::noarch
+	$pkgname-extra-tools:extra"
 source="https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver/clang-$pkgver.src.tar.xz
+	https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver/clang-tools-extra-$pkgver.src.tar.xz
 	10-add-musl-triples.patch
 	20-Enable-stack-protector-by-default-for-Alpine-Linux.patch
 	30-fix-python-shebangs.patch
 	"
 
 builddir="$srcdir/clang-$pkgver.src"
+
+prepare() {
+	mv "$srcdir/clang-tools-extra-$pkgver.src" "$builddir/tools/extra"
+	default_prepare
+}
 
 build() {
 	mkdir -p "$builddir"/build
@@ -97,7 +104,33 @@ analyzer() {
 	mv usr/share/scan-* "$subpkgdir"/usr/share/
 }
 
+extra() {
+	pkgdesc="Extra tools built using Clang’s tooling APIs"
+
+	cd "$pkgdir"
+
+	mkdir -p "$subpkgdir"/usr/bin "$subpkgdir"/usr/share/clang
+
+	mv usr/bin/clang-apply-replacements "$subpkgdir"/usr/bin/
+	mv usr/bin/clang-reorder-fields "$subpkgdir"/usr/bin/
+	mv usr/bin/modularize "$subpkgdir"/usr/bin/
+	mv usr/bin/clang-tidy "$subpkgdir"/usr/bin/
+	mv usr/share/clang/*clang-tidy* "$subpkgdir"/usr/share/clang
+	mv usr/bin/clang-change-namespace "$subpkgdir"/usr/bin/
+	mv usr/bin/clang-doc "$subpkgdir"/usr/bin/
+	mv usr/bin/clang-include-fixer "$subpkgdir"/usr/bin/
+	#mv usr/bin/clang-move "$subpkgdir"/usr/bin/
+	mv usr/bin/find-all-symbols "$subpkgdir"/usr/bin/
+	mv usr/share/clang/clang-include-fixer* "$subpkgdir"/usr/share/clang
+	mv usr/share/clang/run-find-all-symbols.py "$subpkgdir"/usr/share/clang
+	mv usr/bin/clang-query "$subpkgdir"/usr/bin/
+	mv usr/bin/clangd* "$subpkgdir"/usr/bin/
+	#mv usr/bin/pp-trace "$subpkgdir"/usr/bin/
+	#mv usr/bin/tool-template "$subpkgdir"/usr/bin/
+}
+
 sha512sums="3bcdcfd1ebb20a2cb15d57c608106b6e6e9c2eda4b781f573e84e0600b775bb7609f6df9edcf819ee5d91cc01a28ee089353c29fd57c23b867afbf6ad2f5cd13  clang-9.0.1.src.tar.xz
+4a671596460809f314ed96b0cc0be7f2498692275d0a7bd08266f9cdf4b85fb39cb4eea4131602e9a170a75eb5d9623449960f873e25b999e06c016387a1918d  clang-tools-extra-9.0.1.src.tar.xz
 367dcd43b42570b5688c4bb41daf2498447e9fa4384896e2b91782017a8ce15b1e6e15cb3a465595d69e681420fce170a6f9a57ea5268e21f0dec7d4605e4c4c  10-add-musl-triples.patch
 a8557c5a26774bf98548b9fe77cd54a1b0591bc75beffcb5fbd070986ba954d82255dddbcfcc884c07c3f433b1428c2a6ce649c3a158f4352f30e7057872335b  20-Enable-stack-protector-by-default-for-Alpine-Linux.patch
 c7f34b425b0dcea9752eeb7ff3d3a33af9cc45740fd3e77d52e4d610c5fd3daaa4d59138a255b057ef886915615a77ec1e6a447f3818b4b2724129c0ba354932  30-fix-python-shebangs.patch"
