testing/gcc-cross-embedded: upgrade to 9.2.0

--- a/testing/gcc-cross-embedded/APKBUILD
+++ b/testing/gcc-cross-embedded/APKBUILD
@@ -12,30 +12,29 @@ _targets="
 	msp430-elf
 	"
 pkgname="$_pkgbase-cross-embedded"
-pkgver=8.3.0
-pkgrel=1
+pkgver=9.2.0
+pkgrel=0
 pkgdesc="The GNU Compiler Collection for embedded targets"
 url="http://gcc.gnu.org"
 depends="gcc"
 makedepends="bash linux-headers gmp-dev mpfr-dev mpc1-dev zlib-dev"
 arch="all"
-license="GPL-2.0 GPL-3.0-or-later LGPL-2.0"
+license="GPL-3.0-or-later"
 for target in $_targets; do
 	targetnorm="${target//-/_}"
-	subpackages="${_pkgbase}-${target}:${targetnorm} ${subpackages}"
+	subpackages="$_pkgbase-$target:$targetnorm $subpackages"
 	makedepends="$makedepends binutils-$target newlib-$target-stage1"
 done
 
 _islver=0.20
 source="https://mirrors.kernel.org/gnu/gcc/gcc-$pkgver/gcc-$pkgver.tar.xz
-	http://isl.gforge.inria.fr/isl-${_islver}.tar.bz2"
+	http://isl.gforge.inria.fr/isl-$_islver.tar.bz2"
 
 options="!check"
 
 builddir="$srcdir/$_pkgbase-$pkgver"
 
 prepare() {
-	cd "$builddir"
 	# link isl for in-tree build
 	ln -s "$srcdir"/isl-"$_islver" isl
 
@@ -91,7 +90,7 @@ _build_gcc() {
 build() {
 	for target in $_targets; do
 		# Build "regular" variant
-		workingdir="${srcdir}/build-${target}"
+		workingdir="$srcdir/build-$target"
 		mkdir "$workingdir"
 		cd "$workingdir"
 		export CFLAGS_FOR_TARGET='-pipe -Os -ffunction-sections -fdata-sections'
@@ -99,7 +98,7 @@ build() {
 		_build_gcc
 
 		# Rebuild without exceptions to generate nano variant of libstc++
-		workingdir="${srcdir}/build-${target}-nano"
+		workingdir="$srcdir/build-$target-nano"
 		mkdir "$workingdir"
 		cd "$workingdir"
 		export CFLAGS_FOR_TARGET='-pipe -Os -ffunction-sections -fdata-sections  -fno-exceptions'
@@ -112,19 +111,19 @@ package() {
 	for target in $_targets; do
 		depends="$depends $_pkgbase-$target"
 	done
-	mkdir -p "${pkgdir}"
+	mkdir -p "$pkgdir"
 }
 
 _install_subpkg() {
-	target="${subpkgname#${_pkgbase}-}"
+	target="${subpkgname#$_pkgbase-}"
 	pkgdesc="The GNU Compiler Collection for $target targets"
 	depends="$depends binutils-$target"
-	workingdir="${srcdir}/build-${target}"
+	workingdir="$srcdir/build-$target"
 	cd "$workingdir"
 	make install DESTDIR="$subpkgdir" -j1
 
 	# install nano-variant into temporary folder to obtain libstdc++ from there
-	workingdir="${srcdir}/build-${target}-nano"
+	workingdir="$srcdir/build-$target-nano"
 	cd "$workingdir"
 	make install DESTDIR="$subpkgdir-nano" -j1
 
@@ -162,5 +161,5 @@ msp430_elf() {
 	_install_subpkg
 }
 
-sha512sums="1811337ae3add9680cec64968a2509d085b6dc5b6783fc1e8c295e3e47416196fd1a3ad8dfe7e10be2276b4f62c357659ce2902f239f60a8648548231b4b5802  gcc-8.3.0.tar.xz
+sha512sums="a12dff52af876aee0fd89a8d09cdc455f35ec46845e154023202392adc164848faf8ee881b59b681b696e27c69fd143a214014db4214db62f9891a1c8365c040  gcc-9.2.0.tar.xz
 afe2e159b74646a26449268637403d271f9e3f6410d8cc1c9cffca41370c4357b165dea844db0c2a654591f954e54710dda650c8088abd4711406aa6302da950  isl-0.20.tar.bz2"
