--- a/main/linux-headers/APKBUILD
+++ b/main/linux-headers/APKBUILD
@@ -1,19 +1,18 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=linux-headers
-pkgver=4.19.36
+pkgver=5.4.5
 _kernver=${pkgver%.*}
 pkgrel=0
 pkgdesc="Linux system headers"
 url="http://kernel.org"
 arch="all"
 license="GPL-2.0-only"
-makedepends="perl"
+makedepends="perl rsync"
 options="!check !dbg !strip !tracedeps"
-source="https://kernel.org/pub/linux/kernel/v4.x/linux-$_kernver.tar.xz
-	https://kernel.org/pub/linux/kernel/v4.x/patch-$pkgver.xz
+source="https://kernel.org/pub/linux/kernel/v5.x/linux-$_kernver.tar.xz
+	https://kernel.org/pub/linux/kernel/v5.x/patch-$pkgver.xz
 	revert-broken-uapi.patch
 	0003-remove-inclusion-of-sysinfo.h-in-kernel.h.patch
-	fix-aarch64-asm-ptrace.patch
 	"
 
 prepare() {
@@ -55,8 +54,7 @@ package() {
 	rm -rf "$pkgdir"/usr/include/drm
 }
 
-sha512sums="ab67cc746b375a8b135e8b23e35e1d6787930d19b3c26b2679787d62951cbdbc3bb66f8ededeb9b890e5008b2459397f9018f1a6772fdef67780b06a4cb9f6f4  linux-4.19.tar.xz
-a8281d6edb21fbca3ecc8a11e3692f6f80bb9b1e6f302486eee5a7367304ca88ff9224689c7be1530c30cc23cbe6e6371e40c084499e45090340409b0e93bf77  patch-4.19.36.xz
+sha512sums="9f60f77e8ab972b9438ac648bed17551c8491d6585a5e85f694b2eaa4c623fbc61eb18419b2656b6795eac5deec0edaa04547fc6723fbda52256bd7f3486898f  linux-5.4.tar.xz
+5c33d5db4d6787d7841a82dd8dc5b38dd80c5706bdaf9bd331e82173302a4cf3bc9c5e1d00f489d3d78b54bc1f8f82f34df2fcd47b1ab4ffb0a01dc7bdc06cff  patch-5.4.5.xz
 32597f2672d1ec365a936d15041a7cf219ef9353241d4a5c378244cf2fc155610443a19bbcd391c86099a0b08486c45e042ec7c90b0d04fe675c3ad0ffc36b53  revert-broken-uapi.patch
-302283b1b5f560c850e24aad73febcf7f906ed62b4cad2d826bf140ffe59191631f3cd4ac29525c349cdfe61aba6a47886a0d76f1c6a4a16b744d59b94ea5df8  0003-remove-inclusion-of-sysinfo.h-in-kernel.h.patch
-8b510dae7656ec9decee611773c21c0b379ccc8a776e4e0135cc28764fec611e9fc8bdee6a457d8df21f1399d3141659a20b70a0cb5efbb3e3b7aa7d5a5573ce  fix-aarch64-asm-ptrace.patch"
+302283b1b5f560c850e24aad73febcf7f906ed62b4cad2d826bf140ffe59191631f3cd4ac29525c349cdfe61aba6a47886a0d76f1c6a4a16b744d59b94ea5df8  0003-remove-inclusion-of-sysinfo.h-in-kernel.h.patch"
