abuild: explicitly sort apk content

--- a/abuild.in
+++ b/abuild.in
@@ -1607,13 +1607,15 @@ create_apks() {
 		fi
 
 		# normalize timestamps
-		find . -exec touch -h -d "@$SOURCE_DATE_EPOCH" {} +
+		find "$@" -exec touch -h -d "@$SOURCE_DATE_EPOCH" {} +
 
-		tar --xattrs \
+		# explicitly sort package content
+		find "$@" -print0 | LC_ALL=C sort -z | tar --xattrs \
 			--format=posix \
 			--pax-option=exthdr.name=%d/PaxHeaders/%f,atime:=0,ctime:=0 \
 			--mtime="@${SOURCE_DATE_EPOCH}" \
-			-f - -c "$@" | abuild-tar --hash | $gzip -n -9 >"$dir"/data.tar.gz
+			--no-recursion --null -T - \
+			-f - -c | abuild-tar --hash | $gzip -n -9 >"$dir"/data.tar.gz
 
 		msg "Create checksum..."
 		# append the hash for data.tar.gz
