community/cabal: upgrade to 3.0.0.0

--- a/community/cabal/APKBUILD
+++ b/community/cabal/APKBUILD
@@ -1,10 +1,10 @@
 # Contributor: Steeve Chailloux <steeve.chailloux@orus.io>
 # Maintainer: Mitch Tishmack <mitch.tishmack@gmail.com>
 pkgname=cabal
-pkgver=2.4.1.0
+pkgver=3.0.0.0
 pkgrel=0
 pkgdesc="The Haskell Cabal"
-url="http://haskell.org"
+url="https://haskell.org/"
 arch="x86_64"
 license="BSD-3-Clause"
 depends="gmp zlib"
@@ -34,4 +34,4 @@ package() {
 }
 
 sha512sums="735a1aa9084d7eb7297076587cf2896af2951d4a2ecc20c5a6758a91c3751f5c212b65668befc25cfbc273633041543bda3da0fe9cee59795eeb3f40b3fb4922  cabal-0001-force-ld.gold.patch
-4c493448724fd3c073dd61133f4c8ae757ae97fb4c3e2b4db23dcb99894a8e790ec71d0d1fb6f58702f347143261092c0fc556741b7d5fcb192edd308e8182f4  cabal-install-2.4.1.0.tar.gz"
+0b15313fc11bc6b6018e01b6a3a65242306977c16ce9333ea1191c1ce0020b180451235a7a65b47bc01791e05d1b246bf9d573fc7e981a46fcfc7da0fed04cca  cabal-install-3.0.0.0.tar.gz"
