testing/range-v3: upgrade to 0.10.0

--- a/testing/range-v3/APKBUILD
+++ b/testing/range-v3/APKBUILD
@@ -1,43 +1,46 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=range-v3
-pkgver=0.9.1
-pkgrel=1
+pkgver=0.10.0
+pkgrel=0
 pkgdesc="Experimental range library for C++11/14/17"
+options="!check"
 url="https://github.com/ericniebler/range-v3"
 arch="noarch"
 license="BSL-1.0"
-makedepends="cmake"
+makedepends="cmake ninja"
 subpackages="$pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/ericniebler/range-v3/archive/$pkgver.tar.gz"
 
+prepare() {
+	sed -e '/Werror/d' -i cmake/ranges_flags.cmake
+	default_prepare
+}
+
 build() {
-	sed -i -e '/Werror/d' -e '/Wextra/d' -e '/Wall/d' cmake/ranges_flags.cmake
 	if [ "$CBUILD" != "$CHOST" ]; then
-		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux -DRANGES_NATIVE=OFF"
+		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
 	fi
-	cmake \
+	cmake -B build -G Ninja \
 		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
-		-DCMAKE_C_FLAGS="$CFLAGS" \
 		-DRANGE_V3_EXAMPLES=OFF \
 		-DRANGE_V3_PERF=OFF \
-		-DRANGE_V3_TESTS=ON \
-		-DRANGE_BUILD_CALENDAR_EXAMPLE=OFF \
-		-DRANGES_NATIVE=ON \
+		-DRANGE_V3_TESTS=OFF \
+		-DRANGE_V3_HEADER_CHECKS=ON \
+		-DRANGES_MODULES=OFF \
+		-DRANGES_NATIVE=OFF \
+		-DRANGES_DEBUG_INFO=OFF \
+		-DRANGES_PREFER_REAL_CONCEPTS=ON \
+		-DRANGES_VERBOSE_BUILD=ON \
 		$CMAKE_CROSSOPTS
-	make
-}
-
-check() {
-	make test
+	ninja -C build
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="167db645527b769f3d375db63bb0a5c831e9c854bc729581a7d25c571cc1741eafb82812006c5bbe346222a73d5fbbd0b2f17119317038394ac15cf892088aa3  range-v3-0.9.1.tar.gz"
+sha512sums="4db089dcbf638eb30fa20dcf6785dd460c5a074a8912984a484592753cfee9f5b9a0e2c56b5bc5921d1b6120877aa2c83ac0a6fe428088ef2854033a635e9723  range-v3-0.10.0.tar.gz"
