community/riot-web: upgrade to 1.5.8
- update package ownership

--- a/community/riot-web/APKBUILD
+++ b/community/riot-web/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Carlo Landmeter <clandmeter@alpinelinux.org>
-# Maintainer: Carlo Landmeter <clandmeter@alpinelinux.org>
+# Maintainer: Galen Abell <galen@galenabell.com>
 pkgname=riot-web
-pkgver=0.14.1
+pkgver=1.5.8
 pkgrel=0
 pkgdesc="A glossy Matrix collaboration client for the web"
 url="http://riot.im/"
@@ -25,4 +25,4 @@ package() {
 		"$pkgdir"/usr/share/webapps/riot-web/config.json
 }
 
-sha512sums="2121c8e7269ef7b83968e3c65fd9a905e8ffbd757c571cbf1e7238fbed18dbb23394192db27baf82a4f6d4042b9754b7a71b9c1a7bcf485e23f53850f6d2fa04  riot-v0.14.1.tar.gz"
+sha512sums="971316d55366385af21d9b61dea48fa256aea1dbdf29f7e8479a502aee6e92a098d46d2ae692a6ff44b9850f149b604c1568742497331668b32ce5524533e1c0  riot-v1.5.8.tar.gz"
