main/procmail: disable build on mips64

--- a/main/procmail/APKBUILD
+++ b/main/procmail/APKBUILD
@@ -5,7 +5,7 @@ pkgver=3.22
 pkgrel=4
 pkgdesc="Highly configurable auto mail processing"
 url="http://www.procmail.org"
-arch="all"
+arch="all !mips64"
 license="GPL"
 makedepends="$depends_dev"
 subpackages="$pkgname-doc"
