main/nagios-plugins: upgrade to 2.3.1

--- a/main/nagios-plugins/APKBUILD
+++ b/main/nagios-plugins/APKBUILD
@@ -1,23 +1,23 @@
+# Contributor: Michael Pirogov <vbnet.ru@gmail.com>
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jeff Bilyk <jbilyk@gmail.com>
 pkgname=nagios-plugins
-pkgver=2.2.1
-pkgrel=8
+pkgver=2.3.1
+pkgrel=0
 pkgdesc="Plugins for Nagios to check services on hosts"
 url="https://nagios-plugins.org"
 arch="all"
 license="GPL-2.0"
-depends=""
-depends_by_ssh="openssh-client"
-depends_dig="bind-tools"
-depends_disk_smb="samba-client"
-depends_dns="bind-tools"
-depends_fping="fping"
-depends_log="grep"
-depends_rcp="rpcbind"
-depends_sensors="grep lm-sensors"
-depends_snmp="net-snmp-tools"
+_depends_by_ssh="openssh-client"
+_depends_dig="bind-tools"
+_depends_disk_smb="samba-client"
+_depends_dns="bind-tools"
+_depends_fping="fping"
+_depends_log="grep"
+_depends_rcp="rpcbind"
+_depends_sensors="grep lm-sensors"
+_depends_snmp="net-snmp-tools"
 makedepends="openssh-client bind-tools samba-client fping grep rpcbind
 	lm-sensors net-snmp-tools
 	file freeradius-client-dev libdbi-dev libpq linux-headers mariadb-dev
@@ -27,11 +27,10 @@ install="$pkgname.post-upgrade"
 pkgusers="nagios"
 pkggroups="nagios"
 options="suid"
-source="https://www.nagios-plugins.org/download/$pkgname-$pkgver.tar.gz
+source="https://www.nagios-plugins.org/download/nagios-plugins-$pkgver.tar.gz
 	fix-mysql-headers.patch
 	check_openrc
 	nagios-openrc.sudoers"
-builddir="$srcdir/$pkgname-$pkgver"
 
 _plugins_dir="/usr/lib/nagios/plugins"
 
@@ -40,7 +39,7 @@ _plugins="breeze by_ssh cluster dbi dhcp dig disk_smb disk dns dummy file_age
 	fping hpjd http icmp ide_smart ifoperstatus ifstatus ircd ldap load log
 	mailq mrtgtraf mrtg mysql nagios ntp nt nwstat overcr pgsql ping
 	procs radius real rpc sensors smtp snmp ssh swap time ups uptime users
-	wave"
+	wave ssl_validity"
 for _sub in $_plugins; do
 	subpackages="$subpackages $pkgname-$_sub:_plugin"
 done
@@ -57,7 +56,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 
 	./configure \
 		--build=$CBUILD \
@@ -79,7 +77,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 
 	make DESTDIR="$pkgdir" install
 
@@ -118,7 +115,7 @@ _plugin() {
 	local name="${subpkgname#$pkgname-}"
 	local destdir="$subpkgdir/$_plugins_dir"
 	pkgdesc="Nagios plugin check_$name"
-	depends="$pkgname $(eval "echo \$depends_$name")"
+	depends="$pkgname $(eval "echo \$_depends_$name")"
 
 	mkdir -p "$destdir"
 	mv "$pkgdir/$_plugins_dir"/check_$name* "$destdir"/
@@ -152,7 +149,7 @@ _all() {
 	return $retval
 }
 
-sha512sums="6ffe313a56a305b382f62abc0f0958d7078f9050e1340f30721d6e6f71944b57b1650e90e6835c35dd7c9f3f4b4cee9f235b8382b0811db30b3729daaafc9bc3  nagios-plugins-2.2.1.tar.gz
+sha512sums="89208f211e51db4e0d56725a6ff6d2fcf4eb2207f877a2b8f130cda8480a70f318eceb94140eb4f2a17fe3dd967bb3615ccc366c1a531ebd4ff0a04b60c61b8a  nagios-plugins-2.3.1.tar.gz
 5db87cf63fb6d1f72122bd7c72f012aab2724328d3d71da546970792a6cdeedbe008f3feef03f7432f100836ace3701c1902b820c93a79e5fa13abe8b337da0d  fix-mysql-headers.patch
 12d87542631494df1c961e547c19107a025829509e174e8208111736141c12e20dbf490c55d487af39d47cefca5507cd98c973b7b20ae3f961dcbfd167195d8e  check_openrc
 171c9ad14d1027541b78df76063e6d34483dd536219fb83e0346e191739529d59c8d6be468af7f1c4c93b20baf9a32879510f15ec3d06aa1eefaf5d785ea8546  nagios-openrc.sudoers"
