community/iwd: upgrade to 1.4
change main.conf according to new upstream format
add post-upgrade script to try to fix users current config
remove fix-scan.patch, applied upstream
remove disable-eapol-test.patch, not needed with linux-headers 5.4

--- a/community/iwd/APKBUILD
+++ b/community/iwd/APKBUILD
@@ -1,23 +1,22 @@
 # Contributor: Milan P. Stanić <mps@arvanta.net>
 # Maintainer: Milan P. Stanić <mps@arvanta.net>
 pkgname=iwd
-pkgver=1.2
-pkgrel=1
+pkgver=1.4
+pkgrel=0
 pkgdesc="Internet Wireless Daemon"
 url="https://iwd.wiki.kernel.org/"
 arch="all"
 license="LGPL-2.1-or-later"
-depends="ell>=0.26"
+depends="ell>=0.27"
 makedepends="ell-dev dbus-dev readline-dev linux-headers asciidoc"
 checkdepends="coreutils"
 subpackages="$pkgname-doc $pkgname-openrc"
 source="https://mirrors.edge.kernel.org/pub/linux/network/wireless/iwd-$pkgver.tar.gz
 	dbus-netdev-group.patch
-	disable-eapol-test.patch
 	fix-rawmemchr.patch
-	fix-scan.patch
 	iwd.initd
 	main.conf
+	iwd.post-upgrade
 	"
 build() {
 	./configure \
@@ -48,10 +47,9 @@ package() {
 		"$pkgdir"/etc/$pkgname/main.conf
 }
 
-sha512sums="2ff3c03dc0abc031d4149eb48736ddf1cf85681ba3b8e47d3bbfa89ff4772887b682c5fd449060601f7eddf790d6637528f63e8edd53cf8b5f9be37ddcdd22e3  iwd-1.2.tar.gz
+sha512sums="0e4f61c994080f5bbc1528edf76bb16f318e1ebb3beeb5c5c29c991ebdcf12f0e4484f7b601d355443d8b41ed86cc5a9fbd16aace01c526aebb2d78b75b8b214  iwd-1.4.tar.gz
 7d3bc26b558ebfd22335b946f09abd5326e885275979c617af7def1468ade23ba7605f3b13aaf91836035c130aaec04be0ff2708a898f3ae835e0eef4e78fa0e  dbus-netdev-group.patch
-b3dfb5a2de110a8d6218fc6ec7f8e7690bc2ad130037051867d105aff23031d2340f55ac99f060d97856cb5818df24eb7631dc82dcbc196aa44251b2e5edcf7b  disable-eapol-test.patch
 2d8cc70a9475465755f8187c6afb93e5792842dccf55f977ce111e98477517feae1be81eefd50c53149c61d7944a728dc504938ad678a2c789703bcc6f1e7507  fix-rawmemchr.patch
-f3a101605e2823eda0ee41945cecd15d1c2b2cf44315e336e079db283f6f8ed4b76c7192cab7ad6f1ade9c361dd54c6866b2f3c3cec7e26ea89b5c0a29f7365c  fix-scan.patch
 1a913fa19a76a18d92b8f44cb5b4b99a64b4e2f7d2b4a486bf1ba2f939aea7dcca772fca91483011ada58aaa3addc29c76ececd708b2187e57f72aa040ac77e6  iwd.initd
-cc875faa69d5a0a673f923b6373a0d25e15166eef11b91d2ed75e99099e2087ba3d7930243b53cb6c53fc25bfe5f536268da7d40c7b286170388e813ce73d949  main.conf"
+09f4097e653cfecfa1e4bc7b4843832785d0a8ef2a8ecf7daa3d5be704d9ac311fbbecf9f9f5b8b1c75beff894e4cf0d8fda4d6ff728a638dedf77aff0197179  main.conf
+414cb08e01735a66dfb57eac7f308ce75f8f7adf679c5e38418293a0acb2398f9b4df4dd50a6756e48eb03b86de1546e2f852a28677842f2c453a0db86d49f71  iwd.post-upgrade"
