testing/php7-pecl-swoole: upgrade to 4.4.14

--- a/testing/php7-pecl-swoole/APKBUILD
+++ b/testing/php7-pecl-swoole/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Andy Postnikov <apostnikov@gmail.com>
 pkgname=php7-pecl-swoole
 _pkgreal=swoole
-pkgver=4.4.12
+pkgver=4.4.14
 pkgrel=0
 pkgdesc="Event-driven asynchronous and concurrent networking engine with high performance for PHP."
 url="https://pecl.php.net/package/swoole"
@@ -14,9 +14,8 @@ builddir="$srcdir"/$_pkgreal-$pkgver
 subpackages="$pkgname-dev"
 
 build() {
-	cd "$builddir"
 	case "$CARCH" in
-		ppc64le|s390x) export LDFLAGS="$LDFLAGS -lucontext" ;;
+		ppc64le|s390x|x86) export LDFLAGS="$LDFLAGS -lucontext" ;;
 	esac
 	phpize7
 	./configure --prefix=/usr \
@@ -33,10 +32,9 @@ check() {
 }
 
 package() {
-	cd "$builddir"
 	make INSTALL_ROOT="$pkgdir"/ install
 	install -d "$pkgdir"/etc/php7/conf.d
 	echo "extension=$_pkgreal.so" > "$pkgdir"/etc/php7/conf.d/50_$_pkgreal.ini
 }
 
-sha512sums="8899bb048b85c048903c80fe1af045ea4f82a25b3b4fd9995d51c8a2ab144306f9f5651276776e3f6a29c83322fb0aeee2822d131247070fe9e2e87b26f2e0e9  swoole-4.4.12.tgz"
+sha512sums="73b598069d38dcc3201a31fdd93c1bcf0ce31ab5399bade8c31f6decae25ef6e9c0aefe0412409158c1dd0fe502751c8e669e0a34561cb1b36448366708572c6  swoole-4.4.14.tgz"
