non-free/unifi: upgrade to 5.12.35

--- a/non-free/unifi/APKBUILD
+++ b/non-free/unifi/APKBUILD
@@ -4,7 +4,7 @@
 # Contributor: AdamRushad <2429990+adamrushad@users.noreply.github.com>
 pkgname=unifi
 _pkgname=UniFi
-pkgver=5.10.25
+pkgver=5.12.35
 pkgrel=0
 pkgdesc="Ubiquiti UniFi Network Controller"
 url="http://wiki.ubnt.com/UniFi_FAQ"
@@ -37,7 +37,7 @@ package() {
 	local basedir="$pkgdir/usr/lib/$pkgname"
 	local datadir="$pkgdir/var/lib/$pkgname"
 	local webapps="$pkgdir/usr/share/webapps"
-	
+
 	mkdir -p $basedir/bin $datadir $webapps
 
 	install -Dm644 "$srcdir"/$pkgname.logrotated \
@@ -54,7 +54,7 @@ package() {
 	local dir; for dir in dl lib conf; do
 		cp -r $dir "$basedir"/
 	done
-	
+
 	local dir; for dir in work data; do
 		install -dm 755 -o $pkgname -g $pkgname "$datadir/$dir"
 	done
@@ -66,16 +66,16 @@ package() {
 	ln -sf /usr/share/webapps/$pkgname $basedir/webapps
 	ln -sf /var/lib/$pkgname/data $basedir/data
 	ln -sf /var/lib/$pkgname/work $basedir/work
-	
+
 	# overwrite with local snappy but
 	# first we got to figure out the version
-	local file=$(ls lib/ | grep snappy-java)
+	local file=$(ls lib/snappy-java*)
 	local name=${file%.*}
 	local version=${name##*-}
 	# the java-snappy pkg has a symlink so we use that
 	ln -sf /usr/share/java/snappy-java.jar \
 		"$basedir"/lib/snappy-java-$version.jar
-	
+
 	# make sure datadir is writable by our user
 	chown -R $pkgname:$pkgname $datadir
 
@@ -87,7 +87,7 @@ package() {
 	install -Dm755 "$srcdir"/unifi_db_prune.cron "$pkgdir"/etc/periodic/weekly/unifi_db_prune
 }
 
-sha512sums="2a88c8640b10c2b596c40c3e4594062f9828db3e2be5dd159dcf7275b3796c7ef8714c60c27de980672fb1ccc88e9fa7640fc74e61e6d994e3fb1214d0e0bd48  unifi-5.10.25.zip
+sha512sums="4e6b3726e5b6e43c1688fbdefe816eedb1cefc671bc9f861cc06f1c4f52a903670e033c2c5b2c66c5ed2c3f42e8f573e6245fe483a32a0df33283d46ccb5d96a  unifi-5.12.35.zip
 b19a7d684ef2ec7c4159417c21185ccd8ce498da25405b69014fdb32e346a0077f7edc5dfc994481d12936aa8dbf22e6baf29571fd0003aaad19609d24c549f4  unifi.initd
 d339555a91de7488badbedf8a4c85cff878e7d0720a8cf6a8340f51f3666dcf4878b47a1fff4c9c2846d7af140d11e48e898f8c4dba1f81c1004b76a81f0821e  unifi.confd
 9e54d9e1c720b8e50c9af9363105f6ea9ff2cffff7dc67477a7701aacf21ba977424fe9fbaba6a00d5f64310a2e2517e9328a7acb91a4bc06ed237139a8e0d9b  unifi.logrotated
